--- a/style/style-2/query-tablet.css
+++ b/style/style-2/query-tablet.css
@@ -6,13 +6,13 @@ header{
     /* border: 1px solid crimson; */
     /* display:none; */
     position: fixed;
-    width: 100%;
-    justify-content: center;
+    width: 1200px;
+    justify-content: space-between;
     text-align: center;
     }
 .logo {
     /* border: 1px solid crimson; */
-    height: 55%;
+    height: 50%;
     transition: 0.5s;
     }
 /*-------------------------------*/
@@ -32,22 +32,32 @@ header{
     flex-direction: column;
     width:90%;
     background: #0f1525;
-    border:1px solid #64d3ff;
+    border:2px solid #64d3ff;
     border-top:0;
     border-radius: 0px 0px 15px 15px;
-    /*  display: none; */
-
+    gap:25px;
+    padding: 45px 0;
+    display: none;
 }
 .navbar-list a{
     /* border: 1px solid crimson; */
-    font-size: 14px;
+    font-size: 1.2rem;
     justify-content: center;
     align-items:center;
     gap:20px;
     transition: 0.5s;
-    }
-/* #menu-toogle { */
-    /* display:none; */
+}
+.menu-label{
+    /* border:1px solid crimson; */
+    display:flex;
+    justify-content: space-between;
+    order:2;
+}
+.menu-label img{
+    /* border:1px solid crimson; */
+    width:30px;
+    height: 20px;
+}
 
 /* -----------------------------*\ 
 |*-------------Main-------------*| 
