--- a/style/style-2/query-tablet.css
+++ b/style/style-2/query-tablet.css
@@ -14,11 +14,7 @@ header{
     }
 .logo {
     /* border: 1px solid crimson; */
-    height: 60px;
-    display:block;
-    float: right;
-    padding: 20px 0 0 20px;
-    text-decoration: none;
+    height: 55%;
     transition: 0.5s;
     }
 /*-------------------------------*/
