--- a/style/style-2/query-tablet.css
+++ b/style/style-2/query-tablet.css
@@ -26,7 +26,7 @@ header{
     }
 
 .navbar-list{
-    border:1px solid crimson;
+    /* border:1px solid crimson; */
     position:absolute;
     top:65px;
     left:5%;
