--- a/style/query-celular.css
+++ b/style/query-celular.css
@@ -85,7 +85,8 @@ section#hero {
     /* border: 1px solid blue; */
     }
 .hero-info h1{
-    font-size: 1rem;
+    /* border: 1px solid crimson; */
+    font-size: 1.25rem;
     text-align: center;
     background: linear-gradient(to top,#30cfd0,#c43ad6);
     color:transparent;
