--- a/style/query-celular.css
+++ b/style/query-celular.css
@@ -1,18 +1,19 @@
-@media(max-width: 575px) {
+@media(max-width: 576px) {
 /*------- Header ------ */ 
 header {
     /* border:1px solid crimson; */
+    position:sticky;
     display:flex;
-    position:fixed;
-    width: 65%;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
-    padding: 0 15px;
-    height: 50px;
+    padding: 0 30px;
+    height: 55px;
+    top:0;
 }
 .logo {
     /* border: 1px solid crimson; */
-    height: 65%;
+    height: 60%;
     transition: 0.5s;
     }
 /*-------------------------------*/
@@ -65,7 +66,7 @@ header {
 }
 /*----- MAIN ---- */ 
 main {
-    gap: 85px;
+    gap: 5px;
 }
 /*============  HERO ============*/
 /*------------ Hero-card -----------*/
@@ -102,11 +103,16 @@ section#hero {
     width: 80%;
     }
 .hero-img {
-    width:100vw;
-    max-width: 200px;
-    height: 140px;
-    margin-top: 100px;
+    /* width: clamp(200px, 65%, 500px);
+    width: 120px;
+    height: 100px;
+    border-radius: 20px; */
+    width: clamp(200px, 75%, 570px);
+    height: 250px;
+    width:90vw;
+    margin-top: 150px;
     /* border: 1px solid orangered; */
+    object-fit: contain;
     }
 .hero-info span{
     font-weight: 700;
@@ -132,7 +138,7 @@ section#service{
 /*-------- Card-Container ---------*/
 .service-cards-container{
     /* border: 1px solid var(--fire); */
-    max-width: 70vw;
+    max-width: 90vw;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -140,7 +146,7 @@ section#service{
     }
 .service-cards{
     /* border: 1px solid var(--fire); */
-    max-width: 85%;
+    max-width: 90%;
     padding:15px;
     margin:10px;
     }   
@@ -148,7 +154,7 @@ section#service{
     /* border:1px solid var(--fire); */
     font-size: 1.25rem;
     padding:10px;
-    margin:10px;
+    margin-top:100px;
     }
 .service-cards p {
     /* border:1px solid var(--fire); */
@@ -238,7 +244,7 @@ section#portfolio{
     display:flex;
     flex-direction: column;
     align-items: center;
-    max-width: 70vw;
+    max-width: 100vw;
     gap:20px;
     }
 .portfolio-item img {
@@ -355,7 +361,7 @@ section#reseñas, .info-reseñas{
 .card-revision{
     /* border:1px solid var(--fire); */
     display:flex;
-    width: 80vw;
+    width: 80%;
     justify-content: center;
     flex-direction: column;
     align-items: center;
@@ -397,11 +403,13 @@ section#reseñas, .info-reseñas{
     /* margin:5px; */
     }
 .comment{
-    /* border:1px solid var(--fire); */
+    border:1px solid #292525;
     display:flex;
     justify-content: center;
     align-items: center;
     font-size: 18px;
+    width:80%;
+    margin:50px;
     text-align: center;
     }
 
@@ -531,7 +539,8 @@ section#contacto {
     align-items: center;
     text-align: center;
     flex-direction:column;
-    gap:10px;
+    gap:5px;
+    /* display:none; */
         }
 .footer-social{
     /* border: 1px solid crimson; */
@@ -560,7 +569,8 @@ section#contacto {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:15px;
+    gap:5px;
+    display: none;
     }
 .footer-links a {
     color: var(--text-gray)
@@ -575,6 +585,9 @@ footer p{
     }
 }
 
+section{
+    margin-top: 30px;
+}
 
 
 
