header section reseñas info reseñas card revision - query celular

--- a/style/query-celular.css
+++ b/style/query-celular.css
@@ -2,7 +2,8 @@
 /*------- Header ------ */ 
 header {
     /* border:1px solid crimson; */
-    position:fixed;
+    position:sticky;
+    top:0;
     display:flex;
     width: 100%;
     justify-content: space-between;
