--- a/style/query-celular.css
+++ b/style/query-celular.css
@@ -329,9 +329,7 @@ section#reseñas, .info-reseñas{
     max-width: 90%;
     display:flex;
     justify-content: center;
-    width:70vw;
-    padding:10px;
-    gap:5px;
+    width:90vw;
     }
 .info-reseñas h2{
     /* border: 1px solid var(--fire); */
@@ -362,7 +360,7 @@ section#reseñas, .info-reseñas{
 .card-revision{
     /* border:1px solid var(--fire); */
     display:flex;
-    width: 80%;
+    width: 300px;
     justify-content: center;
     flex-direction: column;
     align-items: center;
