--- a/style/query-celular.css
+++ b/style/query-celular.css
@@ -2,10 +2,10 @@
 /*------- Header ------ */ 
 header {
     /* border:1px solid crimson; */
-    position:sticky;
-    top:0;
+    position:fixed !important;
+    top: 0 !important;
     display:flex;
-    width: 100%;
+    width: 100% !important;
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
