--- a/style/query-notebook.css
+++ b/style/query-notebook.css
@@ -2,7 +2,7 @@
 /* -----------------------------*\ 
 |*------------Header------------*| 
 \*------------------------------*/
-@media (993px < width <=1250px) {
+@media (993px < width ) {
 header{
   background: linear-gradient(#121e3c, var(--backgrond));
   display: flex;
@@ -12,11 +12,11 @@ header{
   height: 80px;
   width: 100%;
   backdrop-filter: blur(30px);
-        box-shadow: 0 0 30px rgba(227,228,237, 0.37);
-        border:2px solid rgba(255,255,255, 0.18);
-        position:sticky;
-    /* position:fixed; */
-        /* border: 1px solid crimson; */
+  box-shadow: 0 0 30px rgba(227,228,237, 0.37);
+  border:2px solid rgba(255,255,255, 0.18);
+  /* position:sticky; */
+  /* position:fixed; */
+  /* border: 1px solid crimson; */
 }
 
 /* -----------------------------*\ 
@@ -28,92 +28,92 @@ gap:70px;
 
 /*============  HERO ============*/
 section#hero {
-        display: flex;
-        flex-direction:column;
-        width: 80vw;
-        height: 100vh;
+  display: flex;
+  flex-direction:column;
+  width: 80vw;
+  height: 100vh;
 }
 .hero-info {
-        width: 80vw;
-        display:flex;
-        justify-content: center;
-        align-items: center;
+  width: 80vw;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 .hero-info h1{
-        max-width: 400px;
-        font-size: 1.25rem;
+  max-width: 400px;
+  font-size: 1.25rem;
 }
 
 /*------------ Hero-card -----------*/
 .hero-card {
-        /* display:none; */
-        width:80%;
-        border-radius: 20px;
+  /* display:none; */
+  width:80%;
+  border-radius: 20px;
 }
 
 /*============  SERVICE ============*/
 
 section#service{
-    /* max-width: var(--max-width); */
-        padding:50px 0;
-        display: flex;
-        flex-direction:column;
-        justify-content:center;
-        align-items:center;
-        gap:80px;
-        /*border:1px solid orange;*/
+  /* max-width: var(--max-width); */
+  padding:50px 0;
+  display: flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  gap:80px;
+  /*border:1px solid orange;*/
 }
 
 /*------------ service-Title -----------*/
 #service h2 {
-        font-size: 2rem;
-        font-weight: 800;
+  font-size: 2rem;
+  font-weight: 800;
 }
 
 /*------------ Card-Container -----------*/
 .service-cards-container{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 30px;
-        grid-row-gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
 }
 
 .service-cards{
-        background: var(--secondary);
-        padding: 35px 25px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        gap: 25px;
-        border-radius:15px;
-        width: 450px;
-        box-shadow: 11px 8px 19px -8px rgba(65,179,245,0.76);
+  background: var(--secondary);
+  padding: 35px 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 25px;
+  border-radius:15px;
+  width: 450px;
+  box-shadow: 11px 8px 19px -8px rgba(65,179,245,0.76);
 -webkit-box-shadow: 11px 8px 19px -8px rgba(65,179,245,0.76);
 -moz-box-shadow: 11px 8px 19px -8px rgba(65,179,245,0.76);
 }
 
 .service-cards:hover{
-        border: 1px solid rgba(65,179,245,0.76);
+  border: 1px solid rgba(65,179,245,0.76);
 }
 
 .service-cards img{
-        width: 50px;
-        border-radius: 40%;
+  width: 50px;
+  border-radius: 40%;
 }
 
 .service-cards h3{
-        font-size: 20px;
-        font-weight: 800;
-        margin:20px;
+  font-size: 20px;
+  font-weight: 800;
+  margin:20px;
 }
 
 .service-cards p{
-        font-size: 16px;
-        font-weight: 300;
-        color:var(--text-card);
+  font-size: 16px;
+  font-weight: 300;
+  color:var(--text-card);
 }
 
 
@@ -121,181 +121,179 @@ section#service{
 
 /*------------ Portfolio-Title -----------*/
 .section-title{
-        /* border:1px solid var(--fire); */
-        /* max-width: var(--max-width); */
-        justify-content: center;
+  /* border:1px solid var(--fire); */
+  /* max-width: var(--max-width); */
+  justify-content: center;
 }
 
 .main-title{
-        flex: 0 0 100%;
-        justify-content: center;
-        text-align: center;
-        padding: 20px;
-        font-size: 2rem;
-        font-weight: 800;
-        color:var(--text-white);
+  flex: 0 0 100%;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  font-size: 2rem;
+  font-weight: 800;
+  color:var(--text-white);
 }
 
 .text p{
-        display:flex;
-        justify-content:center;
-        text-align: center;
-        padding:20px 0px;
-        margin:15px 0;
-        font-size:16px;
-        font-weight: 300;
-        color:var(--text-gray);
-        /* border: 1px solid orange; */
+  display:flex;
+  justify-content:center;
+  text-align: center;
+  padding:20px 0px;
+  margin:15px 0;
+  font-size:16px;
+  font-weight: 300;
+  color:var(--text-gray);
+  /* border: 1px solid orange; */
 }
 
 .section-title{
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap:20px;
-        margin-bottom: 20px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap:20px;
+  margin-bottom: 20px;
 }
 
 .section-title p{
-        color:var(--text-gray);
-        max-width: 90%;
-        text-align: center;
+  color:var(--text-gray);
+  max-width: 90%;
+  text-align: center;
 }
 
 /*------------ Filters -----------*/
 .portfolio-filter{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 40px;
-        padding: 30px;
-        /* text-align: center; */
-        margin: 20px 0;
-        background-color: var(--secondary);
-        color:var(--text-gray);
-        border-radius: 10px;
-        width: 1200px;
-        /* border:1px solid orange; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  padding: 30px;
+  /* text-align: center; */
+  margin: 20px 0;
+  background-color: var(--secondary);
+  color:var(--text-gray);
+  border-radius: 10px;
+  width: 1200px;
+  /* border:1px solid orange; */
 }
 
 .portfolio-filter button{
-        text-transform: uppercase;
-        /* margin-top:20px;
-        outline: none; */
-        border: 1px solid;
-        border-color:#64d3ff;
-        padding: 10px 15px;
-        font-weight: 600;
-        border-radius: 10px;
-        background-color: var(--text-white);
-        /* margin: 15px; */
-        color:#404040;
+  text-transform: uppercase;
+  /* margin-top:20px;
+  outline: none; */
+  border: 1px solid;
+  border-color:#64d3ff;
+  padding: 10px 15px;
+  font-weight: 600;
+  border-radius: 10px;
+  background-color: var(--text-white);
+  /* margin: 15px; */
+  color:#404040;
 }
 
 .portfolio-filter button:hover{
-        border: 3px solid #64d3ff;
+  border: 3px solid #64d3ff;
 }
 
 .portfolio .portfolio-filter button.active{
-        color:var(--bg-white);
-        background-color: var(--secondary);
+  color:var(--bg-white);
+  background-color: var(--secondary);
 }
 
 /*------------ Portfolio-Container -----------*/
 .portfolio-items-container{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 30px;
-        grid-row-gap: 20px;
-        justify-items: center;
-        /* border:1px solid orange; */  
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 20px;
+  justify-items: center;
+  /* border:1px solid orange; */  
 }
 
 /*============  EQUIPO ============*/
 section#equipo {
-        /* border: 1px solid var(--fire); */
-        max-width:80%;
-        text-align: center;
-        align-items: center;
-        font-size:1.5rem;
-        gap:5px;
-        margin-bottom: 10px;
-        width:90vw;
+  /* border: 1px solid var(--fire); */
+  max-width:80%;
+  text-align: center;
+  align-items: center;
+  font-size:1.5rem;
+  gap:5px;
+  margin-bottom: 10px;
+  width:90vw;
 }
 
 .equipo-info {
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap:20px
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap:20px
 }
 
 .equipo-info h2{
-        /*border:1px solid orange;*/
-        max-width: 1200px;
-        justify-content: center;
-        text-align: center;
-        align-items: center;
-        padding: 20px;
-        font-size: 2rem;
-        font-weight: 800;
-        color:var(--text-white);
+  /*border:1px solid orange;*/
+  max-width: 1200px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  padding: 20px;
+  font-size: 2rem;
+  font-weight: 800;
+  color:var(--text-white);
 }
 .equipo-info img{
-        margin:20px;
-        padding: 10px;
-        border-radius:20px;
-        box-sizing: border-box;
-        max-height: 400px;
-        box-shadow: 10px 7px 100px -31px rgba(245,136,35,0.76);
-        /* webkit-box-shadow: 10px 7px 100px -31px rgba(245,136,35,0.76); */
-        -moz-box-shadow: 10px 7px 100px -31px rgba(245,136,35,0.76);
+  margin:20px;
+  padding: 10px;
+  border-radius:20px;
+  box-sizing: border-box;
+  max-height: 400px;
+  box-shadow: 10px 7px 100px -31px rgba(245,136,35,0.76);
+  /* webkit-box-shadow: 10px 7px 100px -31px rgba(245,136,35,0.76); */
+  -moz-box-shadow: 10px 7px 100px -31px rgba(245,136,35,0.76);
 }
 
 .equipo-info img:hover{
-        border: 1px solid rgba(65,179,245,0.76);
-        box-shadow: 5px 5px 9px 0px rgba(50,172,212,0.75);
-        -webkit-box-shadow: 5px 5px 9px 0px rgba(50,172,212,0.75);
-        -moz-box-shadow: 5px 5px 9px 0px rgba(50,172,212,0.75);
+  border: 1px solid rgba(65,179,245,0.76);
+  box-shadow: 5px 5px 9px 0px rgba(50,172,212,0.75);
+  -webkit-box-shadow: 5px 5px 9px 0px rgba(50,172,212,0.75);
+  -moz-box-shadow: 5px 5px 9px 0px rgba(50,172,212,0.75);
 }
 
 .equipo-info p{
-        max-width: 80%;
-        text-align: center;
-        font-size: 18px;
-        color:var(--text-gray);
+  max-width: 80%;
+  text-align: center;
+  font-size: 18px;
+  color:var(--text-gray);
 }
 
 /*============  RESEÑAS ============*/
-
-
 /*------------ reseña-Info -----------*/
 .card-info-reseña{
-        /* border:1px solid var(--fire); */
-        display:flex;
-        align-items: center;
-        justify-content: center;
-        max-width: 100%;
+  /* border:1px solid var(--fire); */
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
 }
 .card-revision img{
-        /* border:1px solid var(--fire); */
-        max-width: 200px;
-        padding:10px 15px;
-        margin:10px 15px;
-        gap:10px;
-        display: flex;
-        justify-content: center;
-        border-radius: 20px;
+  /* border:1px solid var(--fire); */
+  max-width: 200px;
+  padding:10px 15px;
+  margin:10px 15px;
+  gap:10px;
+  display: flex;
+  justify-content: center;
+  border-radius: 20px;
 }
 .card-info-name {
-        /* border:1px solid var(--fire); */
-        display:flex;
-        font-size:1rem;
-        padding:10px;
-        margin:10px;
+  /* border:1px solid var(--fire); */
+  display:flex;
+  font-size:1rem;
+  padding:10px;
+  margin:10px;
 }
 .card-info-job span{
         /* border:1px solid var(--fire); */
