--- a/style/styles.css
+++ b/style/styles.css
@@ -54,8 +54,8 @@ header{
     backdrop-filter: blur(30px);
     box-shadow: 0 0 30px rgba(227,228,237, 0.37);
     border:2px solid rgba(255,255,255, 0.18);
-    position:sticky;
-    /* position:fixed; */
+    /* position:sticky; */
+    position:fixed;
     top:0;
     /*border: 1px solid yellow;*/
 }
