--- a/style/query-celular.css
+++ b/style/query-celular.css
@@ -5,7 +5,7 @@ header {
     position:fixed !important;
     top: 0 !important;
     display:flex;
-    width: 100% !important;
+    width: 100vw !important;
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
