--- a/style/styles.css
+++ b/style/styles.css
@@ -59,7 +59,6 @@ header{
     top:0;
     /*border: 1px solid yellow;*/
 }
-
 .section-padding{
     padding:80px 0;
 }
@@ -89,9 +88,9 @@ header{
 .logo:hover{
     height: 85%;
 }
-/* .menu-toogle{ */
-    /* display:none; */
-    /* border: 1px solid crimson; */
+.menu-toogle{
+    display:none;
+}
 
 .navbar{
     gap:150px;
@@ -117,7 +116,6 @@ header{
 
 /*---- Main ---- */ 
 body{
-    max-width: 1200px;
     background:var(--backgrond);
 }
 
@@ -781,3 +779,4 @@ footer p{
     color:var(--text-gray);
     margin-bottom: 10px;
 }
+
