hero info p modificado - query notebook

--- a/style/query-notebook.css
+++ b/style/query-notebook.css
@@ -108,7 +108,10 @@ section#hero {
     font-size: 2rem;
     text-align: center;
 }
-
+.hero-info p {
+    /* border: 1px solid crimson; */
+    text-align: center;
+}
 /*------------ Hero-card -----------*/
 .hero-card {
   /* display:none; */
